--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.sap/src/main/webapp/WEB-INF/web.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.sap/src/main/webapp/WEB-INF/web.xml
@@ -125,6 +125,10 @@
 		<res-auth>Container</res-auth>
 	</resource-ref>
 	
+	<resource-ref>
+    	<res-ref-name>connectivityConfiguration</res-ref-name>
+    	<res-type>com.sap.core.connectivity.api.configuration.ConnectivityConfiguration</res-type>
+	</resource-ref>
 	
 <!-- 
 	<resource-ref>
