--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/ide.sap/src/main/webapp/WEB-INF/web.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/ide.sap/src/main/webapp/WEB-INF/web.xml
@@ -104,6 +104,12 @@
 		<res-type>javax.sql.DataSource</res-type>
 		<res-auth>Container</res-auth>
 	</resource-ref>
+	
+	<resource-ref>
+    	<res-ref-name>connectivityConfiguration</res-ref-name>
+    	<res-type>com.sap.core.connectivity.api.configuration.ConnectivityConfiguration</res-type>
+	</resource-ref>
+	
 <!-- 
 	<resource-ref>
 		<res-ref-name>PasswordStorage</res-ref-name>
