--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.sap/src/main/webapp/WEB-INF/web.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.sap/src/main/webapp/WEB-INF/web.xml
@@ -66,6 +66,25 @@
 			<param-name>logInSystemOutput</param-name>
 			<param-value>true</param-value>
 		</init-param>
+		
+		<!-- JNDI key for the Default Database DataSource -->
+		<init-param>
+			<param-name>jndiDefaultDataSource</param-name>
+			<param-value>java:comp/env/jdbc/DefaultDB</param-value>
+		</init-param>
+		
+		<!-- JNDI key for the Connectivity Service -->
+		<init-param>
+			<param-name>jndiConnectivityService</param-name>
+			<param-value>java:comp/env/connectivity/Configuration</param-value>
+		</init-param>
+		
+		<!-- JNDI key for the Mail Service -->
+		<init-param>
+			<param-name>jndiMailService</param-name>
+			<param-value>java:comp/env/mail/SAPInternalNWCloudSession</param-value>
+		</init-param>
+		
 
 		<load-on-startup>2</load-on-startup>
 
@@ -136,13 +155,6 @@
   	    <res-type>javax.mail.Session</res-type>
   	</resource-ref>
 	
-<!-- 
-	<resource-ref>
-		<res-ref-name>PasswordStorage</res-ref-name>
-		<res-type>com.sap.jpaas.service.securestore.password.PasswordStorage</res-type>
-		<res-auth>Container</res-auth>
-	</resource-ref>
- -->
 
 	<!-- Security -->
 	
