--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.sap/src/main/webapp/WEB-INF/web.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.sap/src/main/webapp/WEB-INF/web.xml
@@ -76,6 +76,12 @@
 			<param-name>jndiMailService</param-name>
 			<param-value>java:comp/env/mail/SAPInternalNWCloudSession</param-value>
 		</init-param>
+		
+		<!-- Auto Commit property for JDBC connection --> 
+		<init-param>
+			<param-name>jdbcSetAutoCommit</param-name>
+			<param-value>false</param-value>  <!-- set to true in case of PostgreSQL -->
+		</init-param>
 
 		<load-on-startup>2</load-on-startup>
 
