Fixed - https://bugs.eclipse.org/bugs/show_bug.cgi?id=470356 MemoryLog is not db agnostic

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/main/webapp/WEB-INF/web.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/main/webapp/WEB-INF/web.xml
@@ -82,7 +82,7 @@
 		
 		<!-- Auto Commit property for JDBC connection --> 
 		<init-param>
-			<param-name>jdbcSetAutoCommit</param-name>
+			<param-name>jdbcAutoCommit</param-name>
 			<param-value>false</param-value>  <!-- set to true in case of PostgreSQL -->
 		</init-param>
 		
