Fixes https://bugs.eclipse.org/bugs/show_bug.cgi?id=471704 Import and Publish of Projects at Runtime

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.init/plugin.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.init/plugin.xml
@@ -53,6 +53,16 @@
      </extension>
      
      <extension
+           id="ProjectImporterServlet"
+           point="org.eclipse.equinox.http.registry.servlets">
+        <servlet
+              alias="/project-import"
+              class="org.eclipse.dirigible.runtime.content.ProjectImporterServlet"
+              load-on-startup="true">
+        </servlet>
+     </extension>
+     
+     <extension
            id="ContentResetServlet"
            point="org.eclipse.equinox.http.registry.servlets">
         <servlet
