--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/ide.tomcat/src/main/webapp/WEB-INF/web.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/ide.tomcat/src/main/webapp/WEB-INF/web.xml
@@ -40,7 +40,7 @@
 		<!-- Corresponding Runtime URL. Used for Registry Perspective, Log Service, etc. -->
 		<init-param>
 			<param-name>runtimeUrl</param-name>
-			<param-value>/dirigible/services</param-value>
+			<param-value>/dirigible-all-tomcat-2.0.150424</param-value>
 		</init-param>
 		
 		<init-param>
@@ -120,14 +120,16 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
-
-	<!-- Resource References
-	
 	<resource-ref>
 		<res-ref-name>jdbc/DefaultDB</res-ref-name>
 		<res-type>javax.sql.DataSource</res-type>
 		<res-auth>Container</res-auth>
 	</resource-ref>
+	
+	
+	<!-- Resource References
+	
+
 	
 	<resource-ref>
     	<res-ref-name>connectivity/Configuration</res-ref-name>
