--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.tomcat/src/main/webapp/WEB-INF/web.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.tomcat/src/main/webapp/WEB-INF/web.xml
@@ -59,12 +59,12 @@
 			<param-value>true</param-value>
 		</init-param>
 		
-		<!-- JNDI key for the Default Database DataSource 
+		<!-- JNDI key for the Default Database DataSource -->
 		<init-param>
 			<param-name>jndiDefaultDataSource</param-name>
 			<param-value>java:comp/env/jdbc/DefaultDB</param-value>
 		</init-param>
-		-->
+		
 		
 		<!-- JNDI key for the Connectivity Service 
 		<init-param>
