--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.org.eclipse.rap.rwt.supplemental.filedialog/.classpath
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.org.eclipse.rap.rwt.supplemental.filedialog/.classpath
@@ -1,7 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry kind="src" path="src/"/>
-	<classpathentry kind="output" path="target/classes"/>
+  <classpathentry kind="src" path="src" including="**/*.java"/>
+  <classpathentry kind="output" path="target/classes"/>
+  <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+  <classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
+  <classpathentry kind="lib" path="/Users/i031512/.m2/repository/p2/osgi/bundle/javax.servlet/3.1.0.v201410161800/javax.servlet-3.1.0.v201410161800.jar"/>
+  <classpathentry kind="lib" path="/Users/i031512/.m2/repository/p2/osgi/bundle/org.eclipse.osgi/3.10.2.v20150203-1939/org.eclipse.osgi-3.10.2.v20150203-1939.jar"/>
+  <classpathentry kind="lib" path="/Users/i031512/.m2/repository/p2/osgi/bundle/org.apache.commons.fileupload/1.2.2.v20111214-1400/org.apache.commons.fileupload-1.2.2.v20111214-1400.jar"/>
+  <classpathentry kind="lib" path="/Users/i031512/.m2/repository/p2/osgi/bundle/org.apache.commons.io/2.2.0.v201405211200/org.apache.commons.io-2.2.0.v201405211200.jar"/>
+  <classpathentry kind="lib" path="/Users/i031512/.m2/repository/p2/osgi/bundle/org.eclipse.osgi.services/3.4.0.v20140312-2051/org.eclipse.osgi.services-3.4.0.v20140312-2051.jar"/>
+  <classpathentry kind="lib" path="/Users/i031512/.m2/repository/p2/osgi/bundle/org.eclipse.equinox.common/3.6.200.v20130402-1505/org.eclipse.equinox.common-3.6.200.v20130402-1505.jar"/>
+  <classpathentry kind="lib" path="/Users/i031512/.m2/repository/p2/osgi/bundle/org.eclipse.core.commands/3.6.100.v20140528-1422/org.eclipse.core.commands-3.6.100.v20140528-1422.jar"/>
+  <classpathentry kind="lib" path="/Users/i031512/.m2/repository/p2/osgi/bundle/org.eclipse.equinox.preferences/3.5.200.v20140224-1527/org.eclipse.equinox.preferences-3.5.200.v20140224-1527.jar"/>
+  <classpathentry kind="lib" path="/Users/i031512/.m2/repository/p2/osgi/bundle/org.eclipse.equinox.registry/3.5.400.v20140428-1507/org.eclipse.equinox.registry-3.5.400.v20140428-1507.jar"/>
+  <classpathentry kind="lib" path="/Users/i031512/.m2/repository/p2/osgi/bundle/org.eclipse.core.contenttype/3.4.200.v20140207-1251/org.eclipse.core.contenttype-3.4.200.v20140207-1251.jar"/>
+  <classpathentry kind="lib" path="/Users/i031512/.m2/repository/p2/osgi/bundle/org.eclipse.core.databinding.observable/1.4.1.v20140210-1835/org.eclipse.core.databinding.observable-1.4.1.v20140210-1835.jar"/>
+  <classpathentry kind="lib" path="/Users/i031512/.m2/repository/p2/osgi/bundle/org.eclipse.core.databinding.property/1.4.200.v20140214-0004/org.eclipse.core.databinding.property-1.4.200.v20140214-0004.jar"/>
+  <classpathentry kind="lib" path="/Users/i031512/.m2/repository/p2/osgi/bundle/com.ibm.icu/54.1.1.v201501272100/com.ibm.icu-54.1.1.v201501272100.jar"/>
+  <classpathentry kind="lib" path="/Users/i031512/.m2/repository/p2/osgi/bundle/org.eclipse.core.databinding/1.4.2.v20140729-1044/org.eclipse.core.databinding-1.4.2.v20140729-1044.jar"/>
+  <classpathentry kind="lib" path="/Users/i031512/.m2/repository/p2/osgi/bundle/org.eclipse.core.runtime/3.10.0.v20140318-2214/org.eclipse.core.runtime-3.10.0.v20140318-2214.jar"/>
+  <classpathentry kind="lib" path="/Users/i031512/.m2/repository/p2/osgi/bundle/org.eclipse.core.expressions/3.4.600.v20140128-0851/org.eclipse.core.expressions-3.4.600.v20140128-0851.jar"/>
+  <classpathentry kind="lib" path="/Users/i031512/.m2/repository/p2/osgi/bundle/org.eclipse.core.jobs/3.6.1.v20141014-1248/org.eclipse.core.jobs-3.6.1.v20141014-1248.jar"/>
+  <classpathentry kind="lib" path="/Users/i031512/.m2/repository/p2/osgi/bundle/org.eclipse.equinox.app/1.3.200.v20130910-1609/org.eclipse.equinox.app-1.3.200.v20130910-1609.jar"/>
+  <classpathentry kind="lib" path="/Users/i031512/.m2/repository/p2/osgi/bundle/org.eclipse.rap.rwt/2.3.2.20150128-1013/org.eclipse.rap.rwt-2.3.2.20150128-1013.jar"/>
+  <classpathentry kind="lib" path="/Users/i031512/.m2/repository/p2/osgi/bundle/org.eclipse.rap.ui/2.3.2.20150119-1706/org.eclipse.rap.ui-2.3.2.20150119-1706.jar"/>
+  <classpathentry kind="lib" path="/Users/i031512/.m2/repository/p2/osgi/bundle/org.eclipse.equinox.http.registry/1.1.300.v20130402-1529/org.eclipse.equinox.http.registry-1.1.300.v20130402-1529.jar"/>
+  <classpathentry kind="lib" path="/Users/i031512/.m2/repository/p2/osgi/bundle/org.eclipse.help/3.6.0.v20130326-1254/org.eclipse.help-3.6.0.v20130326-1254.jar"/>
+  <classpathentry kind="lib" path="/Users/i031512/.m2/repository/p2/osgi/bundle/org.eclipse.rap.jface/2.3.2.20150119-1706/org.eclipse.rap.jface-2.3.2.20150119-1706.jar"/>
+  <classpathentry kind="lib" path="/Users/i031512/.m2/repository/p2/osgi/bundle/org.eclipse.rap.jface.databinding/2.3.2.20150119-1706/org.eclipse.rap.jface.databinding-2.3.2.20150119-1706.jar"/>
+  <classpathentry kind="lib" path="/Users/i031512/.m2/repository/p2/osgi/bundle/org.eclipse.rap.rwt.osgi/2.3.2.20150119-1706/org.eclipse.rap.rwt.osgi-2.3.2.20150119-1706.jar"/>
+  <classpathentry kind="lib" path="/Users/i031512/.m2/repository/p2/osgi/bundle/org.eclipse.rap.ui.workbench/2.3.2.20150119-1706/org.eclipse.rap.ui.workbench-2.3.2.20150119-1706.jar"/>
+  <classpathentry kind="lib" path="/Users/i031512/.m2/repository/p2/osgi/bundle/org.hamcrest/1.1.0.v20090501071000/org.hamcrest-1.1.0.v20090501071000.jar"/>
+  <classpathentry kind="lib" path="/Users/i031512/.m2/repository/p2/osgi/bundle/org.hamcrest.core/1.3.0.v201303031735/org.hamcrest.core-1.3.0.v201303031735.jar"/>
+  <classpathentry kind="lib" path="/Users/i031512/.m2/repository/p2/osgi/bundle/org.hamcrest.library/1.3.0.v201505072020/org.hamcrest.library-1.3.0.v201505072020.jar"/>
+  <classpathentry kind="lib" path="/Users/i031512/.m2/repository/p2/osgi/bundle/org.hamcrest.integration/1.3.0.v201305210900/org.hamcrest.integration-1.3.0.v201305210900.jar"/>
+  <classpathentry kind="lib" path="/Users/i031512/.m2/repository/p2/osgi/bundle/org.hamcrest.text/1.1.0.v20090501071000/org.hamcrest.text-1.1.0.v20090501071000.jar"/>
 </classpath>
