--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/repository/org.eclipse.dirigible.repository.db/.classpath
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/repository/org.eclipse.dirigible.repository.db/.classpath
@@ -1,7 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry kind="src" path="src/"/>
-	<classpathentry kind="output" path="target/classes"/>
+  <classpathentry kind="src" path="src" including="**/*.java"/>
+  <classpathentry kind="output" path="target/classes"/>
+  <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+  <classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
+  <classpathentry kind="lib" path="/Users/i031512/.m2/repository/p2/osgi/bundle/javax.servlet/3.1.0.v201410161800/javax.servlet-3.1.0.v201410161800.jar"/>
+  <classpathentry kind="lib" path="/Users/i031512/.m2/repository/p2/osgi/bundle/org.eclipse.osgi/3.10.2.v20150203-1939/org.eclipse.osgi-3.10.2.v20150203-1939.jar"/>
+  <classpathentry kind="lib" path="/Users/i031512/.m2/repository/p2/osgi/bundle/org.eclipse.osgi.services/3.4.0.v20140312-2051/org.eclipse.osgi.services-3.4.0.v20140312-2051.jar"/>
+  <classpathentry kind="lib" path="/Users/i031512/.m2/repository/p2/osgi/bundle/org.apache.lucene.analysis/3.5.0.v20120725-1805/org.apache.lucene.analysis-3.5.0.v20120725-1805.jar"/>
+  <classpathentry kind="lib" path="/Users/i031512/.m2/repository/p2/osgi/bundle/org.apache.lucene.core/3.5.0.v20120725-1805/org.apache.lucene.core-3.5.0.v20120725-1805.jar"/>
+  <classpathentry kind="lib" path="/Users/i031512/.m2/repository/p2/osgi/bundle/org.eclipse.equinox.util/1.0.500.v20130404-1337/org.eclipse.equinox.util-1.0.500.v20130404-1337.jar"/>
+  <classpathentry kind="lib" path="/Users/i031512/.m2/repository/p2/osgi/bundle/org.eclipse.equinox.ds/1.4.200.v20131126-2331/org.eclipse.equinox.ds-1.4.200.v20131126-2331.jar"/>
+  <classpathentry kind="lib" path="/Users/i031512/.m2/repository/p2/osgi/bundle/org.apache.commons.io/2.2.0.v201405211200/org.apache.commons.io-2.2.0.v201405211200.jar"/>
+  <classpathentry kind="lib" path="/Users/i031512/.m2/repository/p2/osgi/bundle/com.google.gson/2.2.4.v201311231704/com.google.gson-2.2.4.v201311231704.jar"/>
+  <classpathentry kind="lib" path="/Users/i031512/.m2/repository/p2/osgi/bundle/org.slf4j.api/1.7.2.v20121108-1250/org.slf4j.api-1.7.2.v20121108-1250.jar"/>
+  <classpathentry kind="lib" path="/Users/i031512/.m2/repository/p2/osgi/bundle/org.hamcrest/1.1.0.v20090501071000/org.hamcrest-1.1.0.v20090501071000.jar"/>
+  <classpathentry kind="lib" path="/Users/i031512/.m2/repository/p2/osgi/bundle/org.hamcrest.core/1.3.0.v201303031735/org.hamcrest.core-1.3.0.v201303031735.jar"/>
+  <classpathentry kind="lib" path="/Users/i031512/.m2/repository/p2/osgi/bundle/org.hamcrest.library/1.3.0.v201505072020/org.hamcrest.library-1.3.0.v201505072020.jar"/>
+  <classpathentry kind="lib" path="/Users/i031512/.m2/repository/p2/osgi/bundle/org.hamcrest.integration/1.3.0.v201305210900/org.hamcrest.integration-1.3.0.v201305210900.jar"/>
+  <classpathentry kind="lib" path="/Users/i031512/.m2/repository/p2/osgi/bundle/org.hamcrest.text/1.1.0.v20090501071000/org.hamcrest.text-1.1.0.v20090501071000.jar"/>
 </classpath>
