fix for packaging for non-default profiles

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.template.velocity/pom.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.template.velocity/pom.xml
@@ -55,7 +55,7 @@
 							<goal>copy-dependencies</goal>
 						</goals>
 						<configuration>
-							<outputDirectory>${project.build.directory}/${project.name}-${project.version}/lib</outputDirectory>
+							<outputDirectory>${project.build.directory}/${deployment.name}/lib</outputDirectory>
 						</configuration>
 					</execution>
 					 
