data export and import rest services added https://bugs.eclipse.org/bugs/show_bug.cgi?id=472926

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.tomcat/src/tomcat/web.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.tomcat/src/tomcat/web.xml
@@ -180,6 +180,13 @@
 			<web-resource-name>Registry Import/Export Services</web-resource-name>
 			<url-pattern>/services/import</url-pattern>
 			<url-pattern>/services/export</url-pattern>
+			<url-pattern>/services/clone-import</url-pattern>
+			<url-pattern>/services/clone-export</url-pattern>
+			<url-pattern>/services/project-import</url-pattern>
+			<url-pattern>/services/data-import</url-pattern>
+			<url-pattern>/services/data-export</url-pattern>
+			<url-pattern>/services/content-init</url-pattern>
+			<url-pattern>/services/reset</url-pattern>
 		</web-resource-collection>
 		<auth-constraint>
 			<role-name>Operator</role-name>
