anonymous user support https://bugs.eclipse.org/bugs/show_bug.cgi?id=474551

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.init/plugin.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.init/plugin.xml
@@ -93,5 +93,15 @@
               load-on-startup="true">
         </servlet>
      </extension>
+     
+     <extension
+           id="AnonymousUserServlet"
+           point="org.eclipse.equinox.http.registry.servlets">
+        <servlet
+              alias="/anonymous"
+              class="org.eclipse.dirigible.runtime.content.AnonymousUserServlet"
+              load-on-startup="true">
+        </servlet>
+     </extension>
 	 
 </plugin>
