--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/tomcat/web.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/tomcat/web.xml
@@ -246,6 +246,21 @@
 			<role-name>Repository</role-name>
 		</auth-constraint>
 	</security-constraint>
+	
+	
+	<!-- Messaging Services -->
+	<security-constraint>
+		<web-resource-collection>
+			<web-resource-name>Messaging Services</web-resource-name>
+			<url-pattern>/services/message/send</url-pattern>
+			<url-pattern>/services/message/subscribe</url-pattern>
+			<url-pattern>/services/message/receive</url-pattern>
+		</web-resource-collection>
+		<auth-constraint>
+			<role-name>Messenger</role-name>
+			<role-name>Operator</role-name>
+		</auth-constraint>
+	</security-constraint>
 
 	
 	<!-- Security Roles -->
@@ -264,6 +279,10 @@
 	<security-role>
 		<description>Repository can perform direct manipulations on Repository</description>
 		<role-name>Repository</role-name>
+	</security-role>
+	<security-role>
+		<description>Messenger can perform direct communication via Messaging Hub</description>
+		<role-name>Messenger</role-name>
 	</security-role>
 
 </web-app>
