--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/tomcat/web.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/all.tomcat/src/tomcat/web.xml
@@ -261,6 +261,18 @@
 			<role-name>Operator</role-name>
 		</auth-constraint>
 	</security-constraint>
+	
+	<!-- Anonymous Service -->
+	<security-constraint>
+		<web-resource-collection>
+			<web-resource-name>Anonymous Service</web-resource-name>
+			<url-pattern>/services/anonymous/*</url-pattern>
+			<url-pattern>/services/ui/anonymous.html/*</url-pattern>
+		</web-resource-collection>
+		<auth-constraint>
+			<role-name>Anonymous</role-name>
+		</auth-constraint>
+	</security-constraint>
 
 	
 	<!-- Security Roles -->
@@ -283,6 +295,10 @@
 	<security-role>
 		<description>Messenger can perform direct communication via Messaging Hub</description>
 		<role-name>Messenger</role-name>
+	</security-role>
+	<security-role>
+		<description>Anonymous can set explicit user name</description>
+		<role-name>Anonymous</role-name>
 	</security-role>
 
 </web-app>
