--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.tomcat/src/tomcat/web.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/runtime.tomcat/src/tomcat/web.xml
@@ -257,6 +257,19 @@
 		</auth-constraint>
 	</security-constraint>
 	
+	<!-- Anonymous Service -->
+	<security-constraint>
+		<web-resource-collection>
+			<web-resource-name>Anonymous Service</web-resource-name>
+			<url-pattern>/services/anonymous/*</url-pattern>
+			<url-pattern>/services/ui/anonymous.html/*</url-pattern>
+		</web-resource-collection>
+		<auth-constraint>
+			<role-name>Anonymous</role-name>
+		</auth-constraint>
+	</security-constraint>
+	
+	
 	<!-- Security Roles -->
 	<security-role>
 		<description>All SAP NetWeaver Cloud users</description>
@@ -302,5 +315,9 @@
 		<description>Messenger can perform direct communication via Messaging Hub</description>
 		<role-name>Messenger</role-name>
 	</security-role>
-
+	<security-role>
+		<description>Anonymous can set explicit user name</description>
+		<role-name>Anonymous</role-name>
+	</security-role>
+	
 </web-app>
