Executable packages with built-in Tomcat https://bugs.eclipse.org/bugs/show_bug.cgi?id=475082

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/pom.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/pom.xml
@@ -126,6 +126,29 @@
 					<failOnMissingWebXml>true</failOnMissingWebXml>
 				</configuration>
 			</plugin>
+			
+			<plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.0</version>
+				<executions>
+					<execution>
+						<id>tomcat-run</id>
+						<goals>
+						    <goal>exec-war-only</goal>
+						</goals>
+						<phase>package</phase>
+						<configuration>
+						    <path>/dirigible</path>
+						    <enableNaming>false</enableNaming>
+						    <finalName>${deployment.executable}.jar</finalName>
+						    <charset>utf-8</charset>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>			
+
+
 		</plugins>
 	</build>
 	<profiles>
@@ -137,6 +160,7 @@
 			<properties>
 				<deployment.type>tomcat</deployment.type>
 				<deployment.name>${project.name}-${project.version}</deployment.name>
+				<deployment.executable>${project.name}-executable</deployment.executable>
 			</properties>
 		</profile>
 		<profile>
@@ -144,6 +168,7 @@
 			<properties>
 				<deployment.type>trial</deployment.type>
 				<deployment.name>dirigible</deployment.name>
+				<deployment.executable>${project.name}-trial-executable</deployment.executable>
 			</properties>
 		</profile>
 		<profile>
@@ -151,6 +176,7 @@
 			<properties>
 				<deployment.type>sap</deployment.type>
 				<deployment.name>dirigible</deployment.name>
+				<deployment.executable>${project.name}-sap-executable</deployment.executable>
 			</properties>
 		</profile>
 	</profiles>
