Make Orion Editor default for JavaScript, HTML and CSS https://bugs.eclipse.org/bugs/show_bug.cgi?id=475264

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.designer/plugin.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.designer/plugin.xml
@@ -6,7 +6,7 @@
          point="org.eclipse.ui.editors">
       <editor
             class="org.eclipse.dirigible.ide.designer.ui.DesignerEditor"
-            extensions="html"
+            extensions=""
             icon="resources/designer.png"
             id="org.eclipse.dirigible.ide.editor.DesignerEditor"
             name="Designer Editor">
