build fix for trial case

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/pom.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/releng/pom.xml
@@ -87,12 +87,12 @@
 					</execution>
                     <execution>
                         <id>copy-index.html</id>
-                        <phase>compile</phase>
+                        <phase>package</phase>
                         <goals>
                             <goal>copy-resources</goal>
                         </goals>
                         <configuration>
-                            <outputDirectory>${basedir}/src/main/webapp</outputDirectory>
+                            <outputDirectory>${project.build.directory}/${deployment.name}</outputDirectory>
                             <resources>
                                 <resource>
                                     <directory>${basedir}/src/index/${deployment.type}</directory>
